--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
         <div id="effect" class="ui-widget-content ui-corner-all">
           <h3 class="ui-widget-header ui-corner-all" id="pgTitle">Photo-Gallery</h3>
           <a href="#" title="Husky enjoying the cool alaskan weather" id="topPic"><img src="/Jquery_Drag/Images/alaska1.png" alt="Photo of Alaska"></a>
-          <a href="#" title="A polar bear during a beautiful sunset"><img src="/Jquery_Drag/Images/alaska2.png" alt="Photo of Alaska"></a>
-          <a href="#" title="Two mountains reflecting on the water"><img src="/Jquery_Drag/Images/alaska3.png" alt="Photo of Alaska"></a>
-          <a href="#" title="The colder side of alaska" id="bottomPic"><img src="/Jquery_Drag/Images/alaska4.png" alt="Photo of Alaska"></a>
-          <a href="#" title="Crystal river in a valley"><img src="/Jquery_Drag/Images/alaska5.png" alt="Photo of Alaska"></a>
+          <a href="#" title="A polar bear during a beautiful sunset"><img src="/Images/alaska2.png" alt="Photo of Alaska"></a>
+          <a href="#" title="Two mountains reflecting on the water"><img src="/Images/alaska3.png" alt="Photo of Alaska"></a>
+          <a href="#" title="The colder side of alaska" id="bottomPic"><img src="Images/alaska4.png" alt="Photo of Alaska"></a>
+          <a href="#" title="Crystal river in a valley"><img src="/Images/alaska5.png" alt="Photo of Alaska"></a>
         </div>
       </div>
        
